# topax

./: .gitattributes  .gitignore  pyproject.toml  test4.py
cax/: __init__.py  _app.py  _builders.py  _utils.py  ops.py  sdfs.py
cax/templates/: sdf_shell.frag.j2  sdf_shell.glsl.j2
devtools/: gyroid.glsl  shader_viewer.py  slimgui_demo.py  test.ipynb
devtools/shaders/: example_stellarator.glsl  gyroid.glsl  new_templater.glsl  sdfs_with_lines.glsl  view_cube.py
examples/: custom_sdf_example.py  gyroid.py  stellarator.py
topax/: _app.py  _builders.py  _utils.py  _version.py  ops.py  sdfs.py
topax/templates/: shader.glsl.j2
